[package]
name = "putio-trauma"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "putio-trauma"
path = "src/main.rs"

[lib]
name = "putio_trauma"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trauma = "2"